WexGit/Wex_DX/force-app/main/default/objects/ENZ__FTPAttachment__c/fields/Application_Request__c.field-meta.xml
<CustomField>
    <fullName>Application_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Request</label>
    <referenceTo>Application_Request__c</referenceTo>
    <relationshipLabel>FTP Attachments</relationshipLabel>
    <relationshipName>FTP_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>