WexGit/Wex_DX/force-app/main/default/objects/ENZ__FTPAttachment__c/fields/Forward_Appl_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Forward_Appl_to_Credit__c</fullName>
    <description>Used to capture the Field Value from Object:Application Request;Field:Forward_Application_to_Credit__c</description>
    <formula>TEXT( Application_Request__r.Forward_Application_to_Credit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forward Appl to Credit</label>
    <type>Text</type>
</CustomField>