WexGit/Wex_DX/force-app/main/default/objects/ENZ__FTPAttachment__c/fields/Opportunity_18_Char_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_18_Char_Id__c</fullName>
    <formula>ENZ__Opportunity__r.X18_Character_Opportunity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity 18 Char Id</label>
    <type>Text</type>
</CustomField>